WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286669
[WebGPU] Out of order encoding and submission leads to potential incorrect validation
https://bugs.webkit.org/show_bug.cgi?id=286669
Summary
[WebGPU] Out of order encoding and submission leads to potential incorrect va...
Mike Wyrzykowski
Reported
2025-01-28 23:16:36 PST
[WebGPU] Out of order encoding and submission leads to potential incorrect validation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-28 23:16:54 PST
<
rdar://problem/143806368
>
Mike Wyrzykowski
Comment 2
2025-01-28 23:42:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39678
EWS
Comment 3
2025-02-07 14:05:41 PST
Committed
290044@main
(cb889bc9fe7e): <
https://commits.webkit.org/290044@main
> Reviewed commits have been landed. Closing PR #39678 and removing active labels.
EWS
Comment 4
2025-02-10 10:13:17 PST
Committed
289651.72@safari-7621-branch
(cbcdb8fec420): <
https://commits.webkit.org/289651.72@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2548 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug