Source/WebGPU/WebGPU/CommandEncoder.mm
@@ -848,7 +848,7 @@ void CommandEncoder::copyBufferToBuffer(const Buffer& source, uint64_t sourceOff
 
     source.setCommandEncoder(*this);
     destination.setCommandEncoder(*this);
-    destination.indirectBufferInvalidated();
+    destination.indirectBufferInvalidated(*this);
     if (!size || source.isDestroyed() || destination.isDestroyed())
         return;
 
@@ -1494,7 +1494,7 @@ void CommandEncoder::copyTextureToBuffer(const WGPUImageCopyTexture& source, con
     Ref apiDestinationBuffer = fromAPI(destination.buffer);
     sourceTexture->setCommandEncoder(*this);
     apiDestinationBuffer->setCommandEncoder(*this);
-    apiDestinationBuffer->indirectBufferInvalidated();
+    apiDestinationBuffer->indirectBufferInvalidated(*this);
     if (sourceTexture->isDestroyed() || apiDestinationBuffer->isDestroyed())
         return;
 
@@ -1999,7 +1999,7 @@ void CommandEncoder::clearBuffer(Buffer& buffer, uint64_t offset, uint64_t size)
     }
 
     buffer.setCommandEncoder(*this);
-    buffer.indirectBufferInvalidated();
+    buffer.indirectBufferInvalidated(*this);
     auto range = NSMakeRange(static_cast<NSUInteger>(offset), static_cast<NSUInteger>(size));
     if (buffer.isDestroyed() || !size || NSMaxRange(range) > buffer.buffer().length)
         return;
@@ -2074,7 +2074,7 @@ Ref<CommandBuffer> CommandEncoder::finish(const WGPUCommandBufferDescriptor& des
     }
 #endif
 
-    auto result = CommandBuffer::create(commandBuffer, m_device, m_sharedEvent, m_sharedEventSignalValue, *this);
+    auto result = CommandBuffer::create(commandBuffer, m_device, m_sharedEvent, m_sharedEventSignalValue, WTFMove(m_onCommitHandlers), *this);
     m_sharedEvent = nil;
     m_cachedCommandBuffer = result.ptr();
     result->setBufferMapCount(m_bufferMapCount);
@@ -2189,7 +2189,7 @@ void CommandEncoder::resolveQuerySet(const QuerySet& querySet, uint32_t firstQue
 
     querySet.setCommandEncoder(*this);
     destination.setCommandEncoder(*this);
-    destination.indirectBufferInvalidated();
+    destination.indirectBufferInvalidated(*this);
     if (querySet.isDestroyed() || destination.isDestroyed() || !queryCount)
         return;
 
@@ -2256,6 +2256,12 @@ void CommandEncoder::lock(bool shouldLock)
 void CommandEncoder::trackEncoder(CommandEncoder& commandEncoder, WeakHashSet<CommandEncoder>& encoderHashSet)
 {
     encoderHashSet.add(commandEncoder);
+}
+
+void CommandEncoder::addOnCommitHandler(Function<void(CommandBuffer&)>&& onCommitHandler)
+{
+    ASSERT(m_commandBuffer);
+    m_onCommitHandlers.append(WTFMove(onCommitHandler));
 }
 
 #undef GENERATE_INVALID_ENCODER_STATE_ERROR
